# primal

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements-test.txt
.github/workflows/: docker-build.yml
scripts/: generate_icons.py
src/: app.py  config.py  gunicorn.conf.py
src/services/: __init__.py  prime_checker.py
src/static/: manifest.json  service-worker.js
src/templates/: index.html
templates/: index.html
tests/: test_app.py
