[project]
name = "primal"
version = "0.2.0+nightly"
description = "质数检查 Flask 应用"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask==3.0.0",
    "Werkzeug==3.0.1",
    "gunicorn==21.2.0",
    "Flask-Talisman==1.1.0",
]

[project.optional-dependencies]
test = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."], include = ["src*"]}}
